just a commit to safety recent changes

--- a/app/js/pages/editProfile.html
+++ b/app/js/pages/editProfile.html
@@ -93,7 +93,7 @@
                           placeholder="Complete Information for preferred meeting place"></textarea>
 
                 <div>
-                    <label class="control-label"><strong>Additional Metting place (Optional)</strong></label>
+                    <label class="control-label"><strong>Additional Meeting place (Optional)</strong></label>
                     <textarea class="form-control" rows="3"
                               placeholder="Complete Information for preferred meeting place"></textarea>
                 </div>
