--- a/app/js/pages/login.html
+++ b/app/js/pages/login.html
@@ -33,8 +33,8 @@
                 <div class="page-header" style="text-align:center">
                     <h4>Login</h4>
                 </div>
-                <form style="margin-top: 0px" !important>
-                    <div class="userForm" role="login" novalidate action="#">
+                <form class="userForm" novalidate action="#" style="margin-top: 0px" !important>
+                    <div role="login">
                         <div class="form-group" style="width: 100%">
                             <div>
                                 <input type="text" ng-model="user.userName" required class="form-control"
