--- a/app/js/pages/post.html
+++ b/app/js/pages/post.html
@@ -1,4 +1,32 @@
+<style>
+
+    .file {
+        position: relative;
+    }
+    .file label {
+        background: #39D2B4;
+        padding: 5px 20px;
+        color: #fff;
+        font-weight: bold;
+        font-size: .9em;
+        transition: all .4s;
+    }
+    .file input {
+        position: absolute;
+        display: inline-block;
+        left: 0;
+        top: 0;
+        opacity: 0.01;
+        cursor: pointer;
+    }
+    .file input:hover + label,
+    .file input:focus + label {
+        background: #34495E;
+        color: #39D2B4;
+    }
+</style>
 <div class="container-fluid">
+    {{user}}
     <div class="row" style="background: #BED735;">
         <!--<div class="col-md-2">-->
         <!--&lt;!&ndash;<div style="background: white; display: inline-block">&ndash;&gt;-->
@@ -16,75 +44,57 @@
             </form>
         </div>
     </div>
-
-    <div class="container-fluid">
+    {{showUpload}}
+    <div class="container-fluid" ng-if="showUpload === false">
         <div>
             <div>
                 <div>
                 </div>
                 <br/>
 
-                <form name="userForm" novalidate>
+                <form name="postForm" novalidate>
                     <div role="form" class="form-group col-md-4 col-sm-4">
                         <div>
                             <label>Item Name</label>
                             <input type="text" name="itemName" class="form-control"
-                                   ng-model="main.itemName"
+                                   ng-model="itemPost.item_name"
                                    ng-maxlength="50"
                                    required>
 
                             <!-- ngMessages goes here -->
-                            <div class="help-block" ng-messages="userForm.itemName.$error" ng-if="userForm.itemName.$touched" style="color: red">
+                            <div class="help-block" ng-messages="postForm.itemName.$error"
+                                 ng-if="postForm.itemName.$touched" style="color: red">
                                 <p ng-message="maxlength" style="font-size: 14px">Your Item name is too long.</p>
+
                                 <p ng-message="required" style="font-size: 14px">Your Item name is required.</p>
                             </div>
                         </div>
                         <div class="form-group">
                             <label>Description</label>
-                            <textarea class="form-control" style="height: 227px" ng-model="commentMessage" ui-tinymce>Tell us more about your item! This will help you gain attraction to your product.</textarea>
+                            <textarea class="form-control" style="height: 227px" ng-model="itemPost.item_desc" ui-tinymce>Tell us more about your item! This will help you gain attraction to your product.</textarea>
                         </div>
                     </div>
                     <div class="col-md-4 col-sm-4">
-                        <label>Item Value</label>
-                        <div>
-                            <div style="display: inline-block">
-                                <div class="form-group">
-                                    <select class="form-control" style="width: 170px" required>
-                                        <option>Salect range from</option>
-                                        <option>100</option>
-                                        <option>500</option>
-                                        <option>5,000</option>
-                                        <option>10,000</option>
-                                        <option>Above</option>
-                                    </select>
-                                </div>
-                            </div>
-                            &nbsp;
+                        <div style="margin-bottom: 20px">
+                            <label>Value Range</label>
+                            <input type="text" name="itemValue" class="form-control"
+                                   ng-model="itemPost.item_trade_value"
+                                   ng-maxlength="50"
+                                   required>
 
-                            <div style="display: inline-block">
-                                <div class="form-group">
-                                    <select class="form-control" style="width: 170px">
-                                        <option>Select range to</option>
-                                        <option>100</option>
-                                        <option>500</option>
-                                        <option>5,000</option>
-                                        <option>10,000</option>
-                                        <option>Above</option>
-                                    </select>
-                                </div>
+                            <!-- ngMessages goes here -->
+                            <div class="help-block" ng-messages="postForm.itemValue.$error"
+                                 ng-if="postForm.itemValue.$touched" style="color: red">
+                                <p ng-message="maxlength" style="font-size: 14px">Value range is too long.</p>
+
+                                <p ng-message="required" style="font-size: 14px">Value range is required.</p>
                             </div>
                         </div>
-
                         <div class="">
                             <div style="display: inline-block">
                                 <div class="form-group">
-                                    <select class="form-control" style="width: 170px">
-                                        <option>Select Gategory</option>
-                                        <option>Shoes</option>
-                                        <option>Clothes</option>
-                                        <option>Cars</option>
-                                        <option>Collectibles</option>
-                                        <option>Kahit ano</option>
+                                    <select ng-model="itemPost.category_id" class="form-control" style="width: 170px">
+                                        <option ng-repeat="category in categories" value="{{category.category_id}}">{{category.category_name}}</option>
                                     </select>
                                 </div>
                             </div>
@@ -92,23 +102,36 @@
 
                             <div style="display: inline-block">
                                 <div class="form-group">
-                                    <select class="form-control" style="width: 170px">
-                                        <option>Select Condition</option>
+                                    <select class="form-control" ng-model="itemPost.item_condition" style="width: 170px">
                                         <option>New</option>
-                                        <option>USed</option>
+                                        <option>Used</option>
                                     </select>
                                 </div>
                             </div>
                         </div>
-                        <label for="uploadImage">Upload Image</label>
-                        <input type="file" id="uploadImage">
+                        <button type="submit" class="btn btn-success" ng-click="postItem(itemPost)"> Post Item</button>
                         <br/>
-                        <button type="submit" class="btn btn-success"> Submit</button>
-                    <br/>
-                    <br/>
+                        <br/>
+                    </div>
                 </form>
             </div>
         </div>
     </div>
+</div>
+
+<div class="container-fluid" ng-if="showUpload == true">
+    <div class="form-group">
+        <p class="file">
+            <input class="form-control" type="file" id="file" nv-file-select uploader="uploader"/><br/>
+            <label for="file">Upload your image</label>
+        </p>
+        <ul>
+            <li ng-repeat="item in uploader.queue">
+                Name: <span ng-bind="item.file.name"></span><br/>
+                <button class="btn btn-success" ng-click="item.upload()">upload</button>
+            </li>
+        </ul>
+    </div>
+
 </div>
 
